cmake_minimum_required(VERSION 3.12.0)
project(MERGESORT_MPI)


set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -O3")

set(SOURCES main.cpp )


add_executable(MERGESORT_MPI ${SOURCES})


find_package(MPI REQUIRED)
message(STATUS "${MPI_EXECUTABLE_SUFFIX}")
set(MPI_EXECUTABLE_SUFFIX ".openmpi")
message(STATUS "${MPI_EXECUTABLE_SUFFIX}")
message(STATUS "Run: ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} EXECUTABLE ${MPIEXEC_POSTFLAGS} ARGS")
target_link_libraries(DTFE PUBLIC MPI::MPI_CXX)



